# heckle

./: .gitignore  CMakeLists.txt  README.md  extract.py  heckle.tex  which.py
inc/: add.h  check.h  close.h  collision.h.old  defines.h  fill.h  iamdead.h  init.h  ions.h  maxwell.h  memory.h  misc.h  ohm.h  push.h  read.h  scrunch.h  setup.h  smalloc.h  smooth.h  sources.h  start.h  structures.h  subdomains.h  trans.h  wall.h
inc/close/: isotherm.h
inc/plasma/: 2harris.h  electrosmog.h  felafel.h  harris.h  munster.h  shells.h  uniform.h  yaourt.h
src/: add.c  build.c  check.c  check.c.old  close.c  collision.c.old  fill.c  ghost_old.c  heckle.c  iamdead.c  init.c  ions.c  luli.c  makeluli  maxwell.c  memory.c  misc.c  ohm.c  push.c  read.c  setup.c  smalloc.c  smooth.c  sources.c  start.c  subdomains.c  wall.c
src/CloseModel/: closeModel.c  closeModel.h  closeModelFullPressureCommon.c  closeModelFullPressureCommon.h  closeModelFullPressureImplicit.c  closeModelFullPressureImplicit.h  closeModelFullPressureSubCycling.c  closeModelFullPressureSubCycling.h  closeModelIsotherm.c  closeModelIsotherm.h  closeModelPolytrop.c  closeModelPolytrop.h
src/Collisions/: collision.c  collision.h  collisionIonIon.c  collisionIonIon.h
src/HeckleBC/: bc_constants.h  hecklebc.c  hecklebc.h  particlebc.c  particlebc.h  perfcond.c  perfcond.h  periodic.c  periodic.h
src/HeckleBC/tests/: test_perfcond.c
src/HeckleIO/: HeckleIO.c  HeckleIOFields.c  HeckleIOFields.h  HeckleIORestarts.c  HeckleIORestarts.h  HeckleIOSpecies.c  HeckleIOSpecies.h  HeckleIOTime.c  HeckleIOTime.h
src/HeckleIO/old/: HeckleIO.c  HeckleIO.h
src/HeckleMPI/: ghostg2fields.c  ghostg2fields.h  ghostg2mom.c  ghostg2mom.h  ghostg2p.c  ghostg2p.h  ghostg2pwinske.c  ghostg2pwinske.h  ghostg4current.c  ghostg4current.h  ghostg4mom.c  ghostg4mom.h  ghostg4winske.c  ghostg4winske.h  ghosts.c  ghosts.h  particlecomm.c  particlecomm.h
src/HeckleMPI/tests/: test_ghostg2fields.c  test_ghostg2mom.c  test_ghostg4mom.c
src/InitModel/: initModel.c  initModel.h  initModelDoubleHarris.c  initModelDoubleHarris.h  initModelHarris.c  initModelHarris.h  initModelNBeams.c  initModelNBeams.h  initModelNLasers.c  initModelNLasers.h  initModelNhotSpots.c  initModelNhotSpots.h  initModelRecoAsymangle.c  initModelRecoAsymangle.h  initModelShearB.c  initModelShearB.h  initModelUniform.c  initModelUniform.h  old.initModelNhotSpots.c  old.initModelNhotSpots.h
src/Memory/: HeckleMem.c  HeckleMem.h
src/Particle/: particle.c  particle.h
src/Species/: species.c  species.h
src/close/: isotherm.c  polytrop.c  readme  winske.c
src/dev/: add.c
src/plasma/: 2gem.c  electrosmog.c  munster.c  readme  save.munster.c  shells.c  uniform.c  yaourt.c
src/plasma/dev/: felafel.c  gem.c  harris.c  munster.txt  munster2d.c
src/plasma/electrosmog/: heckle.c  start.c  write.c
src/plasma/munster/: heckle.c  start.c  write.c
